--- a/src/main/resources/templates/user/fragments/footer.html
+++ b/src/main/resources/templates/user/fragments/footer.html
@@ -33,9 +33,6 @@
 							</li>-->
 						</ul>
 					</div>
-					<div class="widget">
-
-					</div>
 				</div>
 
 				<div class="col-lg-2 col-md-3 col-sm-3 pc-show" sec:authorize="isAnonymous()">
@@ -52,24 +49,25 @@
 
 				<div class="col-lg-2 col-md-3 col-sm-3 pc-show">
 					<div class="widget">
-						<h6 class="widget_title">소메뉴</h6>
+						<h6 class="widget_title">편집샵 바로 찾기</h6>
 						<ul class="widget_links">
-							<li><a href="#">메뉴명</a></li>
-							<li><a href="#">메뉴명</a></li>
-							<li><a href="#">메뉴명</a></li>
-							<li><a href="#">메뉴명</a></li>
-							<li><a href="#">메뉴명</a></li>
+							<li><a href="/shop-list?&location=서울">서울특별시</a></li>
+							<li><a href="/shop-list?&location=경기">경기도</a></li>
+							<li><a href="/shop-list?&location=인천">인천광역시</a></li>
+							<li><a href="/shop-list?&location=대구">대구광역시</a></li>
+							<li><a href="/shop-list?&location=부산">부산광역시</a></li>
+							<li><a href="/shop-list">우리 지역이 없다면?</a></li>
 						</ul>
 					</div>
 				</div>
 				<div class="col-lg-2 col-md-3 col-sm-3 pc-show">
 					<div class="widget">
-						<h6 class="widget_title">소메뉴</h6>
+						<h6 class="widget_title">컨텐츠 모아보기</h6>
 						<ul class="widget_links">
-							<li><a href="#">메뉴명</a></li>
-							<li><a href="#">메뉴명</a></li>
-							<li><a href="#">메뉴명</a></li>
-							<li><a href="#">메뉴명</a></li>
+							<li><a href="#">카테고리1</a></li>
+							<li><a href="#">카테고리2</a></li>
+							<li><a href="#">카테고리3</a></li>
+							<li><a href="#">카테고리4</a></li>
 						</ul>
 					</div>
 				</div>
