--- a/src/main/resources/templates/user/fragments/footer.html
+++ b/src/main/resources/templates/user/fragments/footer.html
@@ -56,7 +56,7 @@
 							<li><a href="/shop-list?&location=인천">인천광역시</a></li>
 							<li><a href="/shop-list?&location=대구">대구광역시</a></li>
 							<li><a href="/shop-list?&location=부산">부산광역시</a></li>
-							<li><a href="/shop-list">우리 지역이 없다면?</a></li>
+							<li><a href="/shop-list" style="font-weight: 700;">우리 지역이 없다면?</a></li>
 						</ul>
 					</div>
 				</div>
@@ -64,10 +64,10 @@
 					<div class="widget">
 						<h6 class="widget_title">컨텐츠 모아보기</h6>
 						<ul class="widget_links">
-							<li><a href="#">카테고리1</a></li>
-							<li><a href="#">카테고리2</a></li>
-							<li><a href="#">카테고리3</a></li>
-							<li><a href="#">카테고리4</a></li>
+							<li><a href="/content-list">전체</a></li>
+							<li><a href="/content-list?category=옷">옷</a></li>
+							<li><a href="/content-list?category=전자기기">전자기기</a></li>
+							<li><a href="/content-list?category=기타">기타</a></li>
 						</ul>
 					</div>
 				</div>
