타이틀 수정

--- a/src/main/resources/templates/user/fragments/head.html
+++ b/src/main/resources/templates/user/fragments/head.html
@@ -27,7 +27,7 @@
 	      content="select shop, feed shop, street brand, hiphop brand">
 
 	<!-- SITE TITLE -->
-	<title>SHIFT 3 - 편집샵에 대한 새로운 접근</title>
+	<title>SHIFT3 - 이 세상 모든 스토어를 연결하다</title>
 	<!-- Favicon Icon -->
 
 
