--- a/src/main/resources/templates/user/content/login.html
+++ b/src/main/resources/templates/user/content/login.html
@@ -55,7 +55,7 @@
 									</li>
 								</div>
 								<div class="col-4">
-									<li><a href="#"><i><img
+									<li><a href="/oauth2/authorization/facebook"><i><img
 											th:src="@{/user/assets/images/icon_facebook_login.png}"/></i>페이스북</a></li>
 								</div>
 								<div class="col-4">
