--- a/src/main/resources/templates/user/content/main.html
+++ b/src/main/resources/templates/user/content/main.html
@@ -47,7 +47,11 @@
 				<div class="row justify-content-start">
 					<div class="col-md-6">
 						<div class="text-start mb-2">
-							<span class="category_split"><b>#</b>최근 피드</span>
+							<span class="category_split">
+								<a href="/content-list" style="color:white">
+									<b>#</b>최근 피드
+								</a>
+							</span>
 						</div>
 						<div class="small_divider clearfix"></div>
 					</div>
@@ -146,7 +150,12 @@
 				<div class="row justify-content-start mb-3">
 					<div class="col-md-6">
 						<div class="text-start">
-							<span class="category_split"><b>#</b>옷</span>
+							<span class="category_split">
+								<a href="/content-list?category=옷" style="color:white">
+									<b>#</b>옷
+								</a>
+							</span>
+						</a>
 						</div>
 					</div>
 				</div>
@@ -181,7 +190,11 @@
 				<div class="row justify-content-start mb-3">
 					<div class="col-md-6">
 						<div class="text-start">
-							<span class="category_split"><b>#</b>전자기기</span>
+							<span class="category_split">
+								<a href="/content-list?category=전자기기" style="color:white">
+									<b>#</b>전자기기
+								</a>
+							</span>
 						</div>
 					</div>
 				</div>
