--- a/src/main/resources/templates/user/content/pages/my-page/qna.html
+++ b/src/main/resources/templates/user/content/pages/my-page/qna.html
@@ -23,9 +23,11 @@
 
 				<select class="form-select" id="questionType" name="questionType" required>
 					<option value="">문의 유형</option>
-					<option value="회원관련">회원관련</option>
-					<option value="카테고리1">카테고리</option>
-					<option value="카테고리2">카테고리</option>
+					<option value="회원가입 및 로그인">회원가입 및 로그인</option>
+					<option value="편집샵 및 지역 요청">편집샵 및 지역 요청</option>
+					<option value="컨텐츠 관련 문의">컨텐츠 관련 문의</option>
+					<option value="상품 관련">상품 관련</option>
+					<option value="홈페이지 관련">홈페이지 관련</option>
 				</select>
 
 				<!--			문의 제목-->
