--- a/src/main/resources/templates/user/content/signup.html
+++ b/src/main/resources/templates/user/content/signup.html
@@ -140,7 +140,8 @@
 									</div>
 
 									<div class="col-5">
-										<button type="button" class="btn btn-block btn-gray" id="verifyEmail"
+										<button type="button" class="btn btn-block btn-gray w-100 h-100"
+										        id="verifyEmail"
 										        name="verifyEmail"
 										        onclick="window.verifyEmail()">인증번호 발송
 										</button>
