--- a/src/main/resources/templates/user/content/pages/my-page/cs.html
+++ b/src/main/resources/templates/user/content/pages/my-page/cs.html
@@ -38,33 +38,33 @@
 							role="tab"
 							aria-controls="ex1-tabs-1"
 							aria-selected="true"
-					>회원관련</a
+					>자주 묻는 질문</a
 					>
 				</li>
-				<li class="nav-item" role="presentation">
-					<a
-							class="nav-link"
-							id="ex1-tab-2"
-							data-bs-toggle="tab"
-							href="#ex1-tabs-2"
-							role="tab"
-							aria-controls="ex1-tabs-2"
-							aria-selected="false"
-					>카테고리</a
-					>
-				</li>
-				<li class="nav-item" role="presentation">
-					<a
-							class="nav-link"
-							id="ex1-tab-3"
-							data-bs-toggle="tab"
-							href="#ex1-tabs-3"
-							role="tab"
-							aria-controls="ex1-tabs-3"
-							aria-selected="false"
-					>카테고리</a
-					>
-				</li>
+				<!--				<li class="nav-item" role="presentation">-->
+				<!--					<a-->
+				<!--							class="nav-link"-->
+				<!--							id="ex1-tab-2"-->
+				<!--							data-bs-toggle="tab"-->
+				<!--							href="#ex1-tabs-2"-->
+				<!--							role="tab"-->
+				<!--							aria-controls="ex1-tabs-2"-->
+				<!--							aria-selected="false"-->
+				<!--					>카테고리</a-->
+				<!--					>-->
+				<!--				</li>-->
+				<!--				<li class="nav-item" role="presentation">-->
+				<!--					<a-->
+				<!--							class="nav-link"-->
+				<!--							id="ex1-tab-3"-->
+				<!--							data-bs-toggle="tab"-->
+				<!--							href="#ex1-tabs-3"-->
+				<!--							role="tab"-->
+				<!--							aria-controls="ex1-tabs-3"-->
+				<!--							aria-selected="false"-->
+				<!--					>카테고리</a-->
+				<!--					>-->
+				<!--				</li>-->
 			</ul>
 			<!-- Tabs navs -->
 
@@ -80,139 +80,88 @@
 						<div class="card">
 							<div class="card-header" id="headingOne">
 								<h6 class="mb-0"><a class="collapsed" data-bs-toggle="collapse" href="#collapseOne"
-								                    aria-expanded="true" aria-controls="collapseOne">Do you have any
-									built-in caching?</a></h6>
+								                    aria-expanded="true" aria-controls="collapseOne">운영 정책</a></h6>
 							</div>
 							<div id="collapseOne" class="collapse show" aria-labelledby="headingOne"
 							     data-bs-parent="#accordion">
 								<div class="card-body">
-									<p>It is a long established fact that a reader will be distracted by the readable
-										content of a page when looking at its layout. The point of using Lorem Ipsum is
-										that it has a more-or-less normal distribution of letters, as opposed to using
-										'Content here, content here', making it look like readable English. Many desktop
-										publishing packages and web page editors now use Lorem Ipsum as their default
-										model text, and a search for 'lorem ipsum' will uncover many web sites still in
-										their infancy.</p>
+									<p>’SHIFT3’은 멋진 편집샵을 찾아 사람들에게 소개하고 관련 컨텐츠를 제작하여 제공하고 있습니다.<br/>
+										모든 편집샵의 사진, 소개, 정보 및 관련 컨텐츠는 ‘SHIFT3’ 팀에서 직접 제작하고 있습니다.<br/>
+										앞으로도 더 멋진 편집샵과 컨텐츠를 제공하기 위해 노력하겠습니다.
+									</p>
 								</div>
 							</div>
 						</div>
 						<div class="card">
 							<div class="card-header" id="headingTwo">
 								<h6 class="mb-0"><a class="collapsed" data-bs-toggle="collapse" href="#collapseTwo"
-								                    aria-expanded="false" aria-controls="collapseTwo">How do I upload
-									files from my phone or tablet?</a></h6>
+								                    aria-expanded="false" aria-controls="collapseTwo">‘SHIFT3＇의 의미는 뭔가요?
+								</a></h6>
 							</div>
 							<div id="collapseTwo" class="collapse" aria-labelledby="headingTwo"
 							     data-bs-parent="#accordion">
 								<div class="card-body">
-									<p>There are many variations of passages of Lorem Ipsum available, but the majority
-										have suffered alteration in some form, by injected humour, or randomised words
-										which don't look even slightly believable. If you are going to use a passage of
-										Lorem Ipsum, you need to be sure there isn't anything embarrassing hidden in the
-										middle of text.</p>
-									<p>All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks
-										as necessary, making this the first true generator on the Internet. It uses a
-										dictionary of over 200 Latin words, combined with a handful of model sentence
-										structures, to generate Lorem Ipsum which looks reasonable. The generated Lorem
-										Ipsum is therefore always free from repetition, injected humour, or
-										non-characteristic words etc.</p>
+									<p>키보드에서 ‘SHIFT’키와 ‘3’을 함께 누르면 특수 기호인 ‘#’이 나오게 됩니다.<br/>멋진 ‘Shop’과 고객을 연결한다는
+										의미로 ’SHIFT3’ 이라는 이름을 사용하고 있습니다.
+									</p>
 								</div>
 							</div>
 						</div>
 						<div class="card">
 							<div class="card-header" id="headingThree">
 								<h6 class="mb-0"><a class="collapsed" data-bs-toggle="collapse" href="#collapseThree"
-								                    aria-expanded="false" aria-controls="collapseThree">How can I start
-									my design?</a></h6>
+								                    aria-expanded="false" aria-controls="collapseThree">편집샵 선정 기준</a>
+								</h6>
 							</div>
 							<div id="collapseThree" class="collapse" aria-labelledby="headingThree"
 							     data-bs-parent="#accordion">
 								<div class="card-body">
-									<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots
-										in a piece of classical Latin literature from 45 BC, making it over 2000 years
-										old. Richard McClintock, a Latin professor at Hampden-Sydney College in
-										Virginia, looked up one of the more obscure Latin words, consectetur, from a
-										Lorem Ipsum passage, and going through the cites of the word in classical
-										literature, discovered the undoubtable source. Lorem Ipsum comes from sections
-										1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and
-										Evil) by Cicero, written in 45 BC. </p>
-									<p>This book is a treatise on the theory of ethics, very popular during the
-										Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..",
-										comes from a line in section 1.10.32.</p>
-									<ul class="list_style_3">
-										<li>The standard chunk of Lorem Ipsum below for those interested</li>
-										<li>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugi
-										</li>
-										<li>Et harum quidem rerum facilis est et expedita distinctio</li>
-										<li>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis
-											voluptatibus maiores
-										</li>
-										<li>when our power of choice is untrammelled and when nothing prevents</li>
-									</ul>
+									<p>SHIFT3 공식 SNS 및 웹사이트에서 소개되는 편집샵은 모두 SHIFT3 팀원들이 직접 찾고 방문한 후 소개합니다.<br/>
+										해당 편집샵에서 판매하는 상품 혹은 분위기 등 여러가지 요소를 고려하여 ‘사람들에게 소개하기에 적합하다.’
+										라는 판단을 내린 후 SNS 및 웹사이트에 업로드 합니다. 원하는 지역 또는 편집샵이 있으면 고객센터에 남겨주세요.<br/>
+										팀원들이 대신 방문한 후 소개하도록 하겠습니다!
+									</p>
 								</div>
 							</div>
 						</div>
 						<div class="card">
 							<div class="card-header" id="headingFour">
 								<h6 class="mb-0"><a class="collapsed" data-bs-toggle="collapse" href="#collapseFour"
-								                    aria-expanded="false" aria-controls="collapseFour">What are popular
-									free webpage builders?</a></h6>
+								                    aria-expanded="false" aria-controls="collapseFour">상품 구매 관련</a></h6>
 							</div>
 							<div id="collapseFour" class="collapse" aria-labelledby="headingFour"
 							     data-bs-parent="#accordion">
 								<div class="card-body">
-									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-										praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
-										excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui
-										officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
-									<p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum
-										soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
-										placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus.
-										Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus
-										saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
-									<ul class="list_style1">
-										<li>The standard chunk of Lorem Ipsum below for those interested</li>
-										<li>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugi
-										</li>
-										<li>Et harum quidem rerum facilis est et expedita distinctio</li>
-										<li>Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis
-											voluptatibus maiores
-										</li>
-										<li>when our power of choice is untrammelled and when nothing prevents</li>
-									</ul>
+									<p>
+										현재 ‘SHIFT3’ 웹사이트 초기 단계로 상품 구매는 해당 사이트가 아닌 외부 사이트를 통해 이루어지고 있습니다.<br/>
+										차후에 웹사이트를 업그레이드 하여 해당 사이트에서 상품 구매가 이루어질 수 있도록 하겠습니다.
+									</p>
 								</div>
 							</div>
 						</div>
 						<div class="card">
 							<div class="card-header" id="headingFive">
 								<h6 class="mb-0"><a class="collapsed" data-bs-toggle="collapse" href="#collapseFive"
-								                    aria-expanded="false" aria-controls="collapseFive">How do you make
-									your own website for free?</a></h6>
+								                    aria-expanded="false" aria-controls="collapseFive">협업 관련</a></h6>
 							</div>
 							<div id="collapseFive" class="collapse" aria-labelledby="headingFive"
 							     data-bs-parent="#accordion">
 								<div class="card-body">
-									<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-										praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias
-										excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui
-										officia deserunt mollitia animi, id est laborum et dolorum fuga.</p>
-									<p>Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum
-										soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime
-										placeat facere possimus, omnis voluptas assumenda est, omnis dolor
-										repellendus.</p>
-									<p> Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus
-										saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae.</p>
+									<p>SHIFT3, 인스타그램 공식 계정 ‘shift3_official’로 연락 주시거나 공식 이메일 계정으로 연락주세요.<br/>
+										해당 편집샵 관련 컨텐츠 제작, 홍보, 온라인 판매 등 가능합니다. 전국의 매력 있는 편집샵을 사람들에게
+										더 널리 알리기 위해 편집샵과 상생하는 SHIFT3 팀이 되겠습니다.
+									</p>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				<div class="tab-pane fade" id="ex1-tabs-2" role="tabpanel" aria-labelledby="ex1-tab-2">
-					Tab 2 content
-				</div>
-				<div class="tab-pane fade" id="ex1-tabs-3" role="tabpanel" aria-labelledby="ex1-tab-3">
-					Tab 3 content
-				</div>
+				<!--				<div class="tab-pane fade" id="ex1-tabs-2" role="tabpanel" aria-labelledby="ex1-tab-2">-->
+				<!--					Tab 2 content-->
+				<!--				</div>-->
+				<!--				<div class="tab-pane fade" id="ex1-tabs-3" role="tabpanel" aria-labelledby="ex1-tab-3">-->
+				<!--					Tab 3 content-->
+				<!--				</div>-->
 			</div>
 			<!-- Tabs content -->
 
