서비스소개 수정

--- a/src/main/resources/static/user/assets/css/custom-style.css
+++ b/src/main/resources/static/user/assets/css/custom-style.css
@@ -357,3 +357,7 @@ div.card .card-body[data-same-height='true'] .card-text {
 .navbar-login-btn:hover a {
     color: white !important;
 }
+
+.btn-hover-white:hover {
+    color: white !important;
+}
