--- a/src/main/resources/templates/user/content/pages/introduce.html
+++ b/src/main/resources/templates/user/content/pages/introduce.html
@@ -2,41 +2,67 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{/user/layout/default_layout}" lang="ko">
 
-    <div layout:fragment="content" class="content">
+<div layout:fragment="content" class="content">
 
-    <div class="intro_section">
-        <div class="container">
-            <div class="row">
-                <div class="title">서비스 소개</div>
-                <div class="subtitle">SHIFT3</div>
-            </div>
-        </div>
-    </div>
-
-
-  <div class="section small_pt pb_20 mb-5">
-      <div class="container">
-          <div class="row justify-content-center text-center">
-              <div class="title">
-                SHIFT3은?
-              </div>
-              <div class="subtitle">
-                  서비스 설명 표시
-              </div>
+	<!--<div class="intro_section">
+		<div class="container">
+			<div class="row">
+				<div class="title">서비스 소개</div>
+				<div class="subtitle">SHIFT3</div>
+			</div>
+		</div>
+	</div>-->
 
 
-          </div>
-      </div>
-  </div>
+	<div class="section pt-0 pb_20 mb-2">
+		<img src="/about/1.jpg" alt="about service" loading="lazy">
+	</div>
 
-    <div class="intro_section">
-        <div class="container">
-            <div class="row">
-                <div class="title mb-3">소개</div>
-                <img th:src="@{/user/assets/images/banner5.jpg}"/>
-            </div>
-        </div>
-    </div>
+	<div class="section pt-0 pb_20">
+		<img src="/about/2.jpg" alt="about service" loading="lazy">
+	</div>
+
+	<div class="section pt-0 pb_20">
+		<img src="/about/3.jpg" alt="about service" loading="lazy">
+	</div>
+
+	<!--	center button -->
+	<div class="section pt-0 pb_20">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12 text-center">
+					<a href="/content-list" class="btn btn-shiftBtn btn-hover-white">컨텐츠 바로가기</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="section pt-0 pb_20">
+		<img src="/about/4.jpg" alt="about service" loading="lazy">
+	</div>
+
+
+	<div class="section pt-0 pb-0">
+		<img src="/about/5.jpg" alt="about service" loading="lazy">
+	</div>
+
+	<div class="section pt-0 pb_20 bg-black">
+		<img src="/about/6.jpg" alt="about service" loading="lazy">
+		<div class="container">
+			<div class="row">
+				<!--<div class="col-md-12 text-center text-white">
+					<h1>편집샵을 운영하고 계신가요?</h1>
+					<h4>언제든지 SHIFT3과 함께 할 수 있습니다.</h4>
+					<h4>아래 문의를 이용해주세요.</h4>
+				</div>-->
+				<div class="col-md-12 text-center">
+					<a href="/mypage/qna" class="btn btn-dark">문의하기</a>
+				</div>
+			</div>
+		</div>
+		<img src="/about/7.jpg" alt="about service" loading="lazy">
+	</div>
+
 
 </div>
 
