--- a/src/main/resources/templates/user/content/pages/introduce.html
+++ b/src/main/resources/templates/user/content/pages/introduce.html
@@ -13,17 +13,23 @@
 		</div>
 	</div>-->
 
+	<script>
+        $(function () {
+            ScrollReveal().reveal('.section', {interval: 20, reset: true});
+        })
+	</script>
+
 
 	<div class="section pt-0 pb_20 mb-2">
-		<img src="/about/1.jpg" alt="about service" loading="lazy">
+		<img src="/about/1.jpg" alt="about service">
 	</div>
 
 	<div class="section pt-0 pb_20">
-		<img src="/about/2.jpg" alt="about service" loading="lazy">
+		<img src="/about/2.jpg" alt="about service">
 	</div>
 
 	<div class="section pt-0 pb_20">
-		<img src="/about/3.jpg" alt="about service" loading="lazy">
+		<img src="/about/3.jpg" alt="about service">
 	</div>
 
 	<!--	center button -->
