--- a/src/main/resources/templates/admin/content/pages/cs/list.html
+++ b/src/main/resources/templates/admin/content/pages/cs/list.html
@@ -41,31 +41,42 @@
 							<td>
 								<table class="table">
 									<tbody>
-									<tr>
-										<th scope="row">이름</th>
-										<td th:text="${question.account.name}"></td>
-									</tr>
-									<tr>
-										<th scope="row">아이디</th>
-										<td th:text="${question.account.username}"></td>
-									</tr>
-									<tr>
-										<th scope="row">관심사</th>
-										<td><input class="interest" readonly
-										           th:value="${question.account.interest}"/></td>
-									</tr>
-									<tr>
-										<th scope="row">핸드폰 번호</th>
-										<td th:text="${question.account.phoneNumber}"></td>
-									</tr>
-									<tr>
-										<th scope="row">SNS 로그인 여부</th>
-										<td th:text="${(question.account.provider == '' || question.account.provider == null) ? 'X' : question.account.provider}"></td>
-									</tr>
-									<tr>
-										<th scope="row">개인정보 3자 제공</th>
-										<td th:text="${question.account.informationToThirdParties ? '동의' : '비동의'}"></td>
-									</tr>
+									<th:block th:if="${question.account != null}">
+										<tr>
+											<th scope="row">이름</th>
+											<td th:text="${question.account.name}"></td>
+										</tr>
+										<tr>
+											<th scope="row">아이디</th>
+											<td th:text="${question.account.username}"></td>
+										</tr>
+
+										<tr>
+											<th scope="row">관심사</th>
+											<td><input class="interest" readonly
+											           th:value="${question.account.interest}"/></td>
+										</tr>
+										<tr>
+											<th scope="row">핸드폰 번호</th>
+											<td th:text="${question.account.phoneNumber}"></td>
+										</tr>
+										<tr>
+											<th scope="row">SNS 로그인 여부</th>
+											<td th:text="${(question.account.provider == '' || question.account.provider == null) ? 'X' : question.account.provider}"></td>
+										</tr>
+										<tr>
+											<th scope="row">개인정보 3자 제공</th>
+											<td th:text="${question.account.informationToThirdParties ? '동의' : '비동의'}"></td>
+										</tr>
+									</th:block>
+
+									<th:block th:if="${question.account == null}">
+										<tr>
+											<th scope="row">질문자 계정</th>
+											<td>탈퇴한 사용자의 질문입니다.</td>
+										</tr>
+									</th:block>
+
 									</tbody>
 								</table>
 							</td>
@@ -176,7 +187,14 @@
 				<td th:text="${question.questionType}"></td>
 				<td th:text="${question.questionTitle}"></td>
 				<td th:text="${#strings.abbreviate(question.questionDescription,10)}"></td>
-				<td th:text="${question.account.username}"></td>
+				<th:block th:if="${question.account != null}">
+					<td th:text="${question.account.username}"></td>
+				</th:block>
+
+				<th:block th:if="${question.account == null}">
+					<td>탈퇴한 사용자</td>
+				</th:block>
+
 				<!--				<td th:text="${question.anwser.isBlank() ? '@답변 하지 않음@' : '@답변 완료된 문의@'}"></td>-->
 				<td th:text="${#temporals.format(question.answerAt, 'yyyy년 MM월 dd일 HH시 mm분')}"></td>
 				<td th:text="${#temporals.format(question.questionAt, 'yyyy년 MM월 dd일 HH시 mm분')}"></td>
