배너 요구사항대로 수정

--- a/src/main/resources/templates/user/fragments/banner.html
+++ b/src/main/resources/templates/user/fragments/banner.html
@@ -2,7 +2,8 @@
 <html lang="ko">
 <!-- START SECTION BANNER -->
 <div class="banner_section slide_wrap shop_banner_slider staggered-animation-wrap" th:fragment="banner">
-	<div id="carouselExampleControls" class="carousel slide carousel-fade light_arrow" data-bs-ride="carousel">
+	<div id="carouselExampleControls" class="carousel slide carousel-fade light_arrow" data-bs-ride="carousel"
+	     data-bs-interval="2000">
 		<div class="carousel-inner">
 			<!--/*@thymesVar id="bannerFeed" type="com.sch.shift3.user.entity.ContentFeed"*/-->
 			<div class="carousel-item background_bg" th:classappend="${bannerStat.index == 0 ? 'active' : ''}"
@@ -42,6 +43,17 @@
 				    th:classappend="${bannerStat.index == 0 ? 'active' : ''}"></li>
 			</th:block>
 		</ol>
+
+		<a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-bs-slide="prev"
+		   style="background-color: rgba(0,0,0,0);">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#carouselExampleControls" role="button" data-bs-slide="next"
+		   style="background-color:transparent;">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="visually-hidden">Next</span>
+		</a>
 	</div>
 </div>
 <!-- END SECTION BANNER -->
