내 위치 검색 구현

--- a/src/main/resources/templates/admin/content/pages/cs/list.html
+++ b/src/main/resources/templates/admin/content/pages/cs/list.html
@@ -169,16 +169,16 @@
 			<!--			index, name, address, created_at-->
 			<thead>
 			<tr>
-				<th>질문 번호</th>
-				<th>질문 유형</th>
-				<th>제목</th>
-				<th>미리보기</th>
-				<th>질의자 아이디</th>
+				<th data-priority="2">질문 번호</th>
+				<th data-priority="3">질문 유형</th>
+				<th data-priority="4">제목</th>
+				<th data-priority="10002">미리보기</th>
+				<th data-priority="10003">질의자 아이디</th>
 				<!--				<th>답변 여부</th>-->
-				<th style="width:10%" data-sortable="">답변시간</th>
-				<th style="width:10%" data-sortable="">질의시간</th>
+				<th data-priority="5" style="width:10%" data-sortable="">답변시간</th>
+				<th data-priority="10004" style="width:10%" data-sortable="">질의시간</th>
 				<!--				<th style="width:3%"></th>-->
-				<th style="width:3%"></th>
+				<th data-priority="1" style="width:3%"></th>
 			</tr>
 			</thead>
 			<tbody>
