데이터테이블 일부 반응형

--- a/src/main/resources/templates/admin/layout/default_layout.html
+++ b/src/main/resources/templates/admin/layout/default_layout.html
@@ -39,6 +39,7 @@
 
 	<!-- Simple DataTables -->
 	<link href="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" rel="stylesheet"/>
+	<link href="https://cdn.datatables.net/responsive/2.4.0/css/responsive.dataTables.min.css" rel="stylesheet"/>
 	<script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
 
 	<th:block layout:fragment="css"></th:block>
@@ -66,4 +67,5 @@
 </div>
 </body>
 <script th:src="@{/admin/js/scripts.js}" crossorigin="anonymous"></script>
+<script src="https://nightly.datatables.net/responsive/js/dataTables.responsive.min.js"></script>
 </html>
