--- a/src/main/resources/templates/user/content/pages/shop-list.html
+++ b/src/main/resources/templates/user/content/pages/shop-list.html
@@ -227,41 +227,76 @@
         }
 
 
-        $(document).ready(function () {
+        window.myLocate = {
+            lat: 37.566826,
+            lng: 126.9786567
+        };
 
-            window.myLocate = {
-                lat: 37.566826,
-                lng: 126.9786567
-            };
+        $(document).ready(function () {
 
             // 내위치 체크 여부 확인
             if ('geolocation' in navigator) {
+
+                $("#shopList").ready(function () {
+                    //loading #shopList
+                    $('#shopList').loading({
+                        theme: 'dark',
+                        message: '불러오는중...'
+                    });
+                });
+
                 /* 위치정보 사용 가능 */
                 navigator.geolocation.getCurrentPosition(function (position) {
+
                     window.myLocate = {
                         lat: position.coords.latitude,
                         lng: position.coords.longitude
                     };
+                    window.isGeolocation = true;
 
+                    // $("#naverMap").ready(function () {
                     if (getRequest().location === '내위치') {
                         search();
                     }
+                    // });
+
+                }, function (error) {
+                    /* 위치정보 사용 불가능 */
+                    console.error(error);
+                    alert('브라우저 위치정보 사용을 허용 후 다시 시도해주세요.');
+
+                    // $("#naverMap").ready(function () {
+                    if (getRequest().location === '내위치') {
+                        search();
+                    }
+                    // });
+                }, {
+                    enableHighAccuracy: false,
+                    maximumAge: 10000,
+                    timeout: 4000
                 });
-                window.isGeolocation = true;
             } else {
                 /* 위치정보 사용 불가능 */
-                //[37.566826, 126.9786567];
-                window.myLocate = {
-                    lat: 37.566826,
-                    lng: 126.9786567
+                alert('브라우저에서 위치정보를 사용할 수 없습니다.');
+
+                if (getRequest().location === '내위치') {
+                    search();
                 }
-                window.isGeolocation = true;
             }
 
             if (getRequest().location !== '내위치') {
-                console.log('내위치 아님')
                 search();
             }
+
+            // navigator.permissions.query({name: 'geolocation'})
+            //     .then(function (permissionStatus) {
+            //         console.log('geolocation permission state is ', permissionStatus.state);
+            //         permissionStatus.onchange = function () {
+            //             if (getRequest().location === '내위치') {
+            //                 search();
+            //             }
+            //         };
+            //     });
         });
 	</script>
 
@@ -444,6 +479,9 @@
                                                 drawMap(item);
                                             });
                                             window.clusteringMap();
+
+                                            //loading #shopList
+                                            $('#shopList').loading('stop');
                                         }
                                     });
                                 }
